files page overflow issue

--- a/src/app/files/files.scss
+++ b/src/app/files/files.scss
@@ -111,29 +111,44 @@
     }
     .file-list-item {
       display: flex;
-      width: calc(100% - 70px);
-      margin-left: 16px;
+      width: calc(100% - 55px);
       border-bottom: 1px solid #f0f0f0;
-      padding: 20px 0;
+      padding: 20px 0 20px 16px;
       box-sizing: border-box;
       .item-name {
-        width: auto;
+        width: 100%;
+        display: flex;
+        flex: 1;
         font-size: 15px;
+        line-height: 17px;
+        max-height: 34px;
         font-weight: 500;
-        flex-grow: 1;
-        max-width: 391px;
+        word-break: break-all;
+        overflow: hidden;
+        max-width: calc(100% - 208px);
         a{
+          display: block; /* Fallback for non-webkit */
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          max-height: 34px;
+          width: 100%;
+          white-space: normal;
           color:#000000;
         }
       }
       .item-date {
         width: 128px;
+        display: flex;
+        flex: none;
         font-size: 13px;
         color: #7D8793;
-        margin-right: 16px;
+        //margin-right: 16px;
       }
       .item-size {
         width: 80px;
+        display: flex;
+        flex: none;
         font-size: 13px;
         color: #7D8793;
       }
